added ota-api files for homekit support with LCM
-TODO: make this optional

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
 idf_component_register(SRCS "lcm_api.c"
                     INCLUDE_DIRS "."
-                    PRIV_REQUIRES esp_partition)
-
+                    PRIV_REQUIRES esp_partition esp32-homekit)
+#TODO: make the homekit reuirement conditional somehow
