--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
 idf_component_register(SRCS "lcm_api.c"
                     INCLUDE_DIRS "."
-                    PRIV_REQUIRES esp_partition esp32-homekit)
-#TODO: make the homekit reuirement conditional somehow
+                    PRIV_REQUIRES esp_partition nvs_flash esp32-homekit)
+#TODO: make the esp32-homekit requirement conditional somehow
